this change adds a p tag

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <h1>Sil</h1>
   <p>Welcome to my website!</p>
   <p>This Website is Cool!</p>
+  <p>HEY!</p>
   <img src="https://content.codecademy.com/articles/github-pages-via-web-app/happy-ice-cream.gif" />
 </body>
  
